--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="bucket img1-t2 center">나도 건강검진 받기</div>
         <div class="bucket img2-t2 center">기타 3곡 마스터하기</div>
         <div class="bucket img2 center">주다영 정모 한번 더 가기^^/</div>
-        <div class="bucket img1 center done">코딩이든 뭐든 배워보자!</div>
+        <div class="bucket img1 center">코딩이든 뭐든 배워보자!</div>
     </div>
 
 </body>
