--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 모두 지켜보자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">토익 시험 보기</div>
-        <div class="bucket img2-t2 center">새로운 게임 사지 않기</div>
-        <div class="bucket img2 center">하지만 그래픽카드는 3060으로 바꾸기</div>
-        <div class="bucket img1 center">가능하다면... 취업하기</div>
-        <div class="bucket img1-t2 center">취업하면 자취하기</div>
-        <div class="bucket img2-t2 center">10kg 빼기</div>
-        <div class="bucket img2 center">등산 가기!!</div>
-        <div class="bucket img1 center">천이 건강검진 해주기</div>
-        <div class="bucket img1-t2 center">나도 건강검진 받기</div>
-        <div class="bucket img2-t2 center">기타 3곡 마스터하기</div>
-        <div class="bucket img2 center">주다영 정모 한번 더 가기^^/</div>
-        <div class="bucket img1 center done">코딩이든 뭐든 배워보자!</div>
+        <div class="bucket img1-t2 center">1. 토익 시험 보기</div>
+        <div class="bucket img2-t2 center">2. 새로운 게임 사지 않기</div>
+        <div class="bucket img2 center">3. 하지만 그래픽카드는 3060으로 바꾸기</div>
+        <div class="bucket img1 center">4. 가능하다면... 취업하기</div>
+        <div class="bucket img1-t2 center">5. 취업하면 자취하기</div>
+        <div class="bucket img2-t2 center">6. 10kg 빼기</div>
+        <div class="bucket img2 center">7. 등산 가기!!</div>
+        <div class="bucket img1 center">8. 천이 건강검진 해주기</div>
+        <div class="bucket img1-t2 center">9. 나도 건강검진 받기</div>
+        <div class="bucket img2-t2 center">10. 기타 3곡 마스터하기</div>
+        <div class="bucket img2 center">11. 주다영 정모 한번 더 가기^^/</div>
+        <div class="bucket img1 center done">12. 코딩이든 뭐든 배워보자!</div>
     </div>
 
 </body>
